# drum-ml

./: .gitignore  ADT_PIPELINE_2026.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: egmd_baseline_experiment.md  reproduce_adtof_baseline.md  step3_contracts.md
scripts/: eval_ood_sweep.py  evaluate.py  prep_accompaniment.py  probe_a2md_label_quality.py  probe_snr_robustness.py  run_adtof_baseline.py  run_eval.py  train.py
src/drumml/: __init__.py  checkpoint.py  eval.py  events.py  features.py  taxonomy.py  tokenize.py  train.py  transcribe.py
src/drumml/baselines/: __init__.py  adtof_port.py
src/drumml/data/: __init__.py  a2md.py  adtof.py  augment.py  base.py  egmd.py  mdb.py  torch_dataset.py
src/drumml/model/: __init__.py  seq2seq.py
tests/: test_augment.py  test_data_adapters.py  test_eval.py  test_events.py  test_experiment.py  test_features.py  test_integration.py  test_model.py  test_taxonomy.py  test_tokenize.py  test_torch_dataset.py  test_transcribe.py
