[project]
name = "drumml"
version = "0.0.1"
description = "Automatic drum transcription: taxonomy, data ingestion, and evaluation toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "mir_eval>=0.7",
    "pretty_midi>=0.2.10",
]

[project.optional-dependencies]
# Audio loading / feature extraction — only needed once you train, not for eval.
audio = ["librosa>=0.10", "soundfile>=0.12"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drumml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
